--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "eslint": "^6.8.0",
+    "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-piano": "^3.1.3",
     "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format:prettier": "prettier --ignore-path .eslintignore --write '**/*.{js,jsx}'",
+    "format:eslint": "eslint . --ext '.js' --fix",
+    "format": "yarn run format:prettier && npm run format:eslint"
   },
   "eslintConfig": {
     "extends": "react-app"
